--- a/src/ui/marketing_home.html
+++ b/src/ui/marketing_home.html
@@ -7,33 +7,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Syne:wght@500;700;800&family=Manrope:wght@400;500;600;700&family=IBM+Plex+Mono:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800&family=Fraunces:opsz,wght@9..144,600;9..144,700&family=IBM+Plex+Mono:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <style>
       :root {
-        --bg: #f4efe6;
-        --ink: #152232;
-        --ink-soft: #37516d;
-        --line: rgba(21, 34, 50, 0.18);
-        --surface: rgba(255, 255, 255, 0.8);
-        --surface-strong: rgba(255, 255, 255, 0.94);
-        --hero: #fffaf2;
-        --brand: #e25e2a;
-        --brand-dark: #a83f18;
-        --sea: #0b758f;
-        --mint: #d5f2e9;
-        --mono: "IBM Plex Mono", "SFMono-Regular", Menlo, monospace;
+        --bg-deep: #10243a;
+        --bg-ink: #0a1828;
+        --bg-cream: #f3efe8;
+        --panel: rgba(255, 255, 255, 0.9);
+        --panel-border: rgba(8, 27, 45, 0.18);
+        --ink: #10243a;
+        --ink-soft: #35536f;
+        --hot: #ef6a2f;
+        --teal: #1a93a5;
+        --mint: #c6f2e4;
+        --mono: "IBM Plex Mono", Menlo, monospace;
       }
 
       * {
         box-sizing: border-box;
       }
 
-      @keyframes fade-up {
+      @keyframes rise {
         from {
           opacity: 0;
-          transform: translateY(16px);
+          transform: translateY(14px);
         }
         to {
           opacity: 1;
@@ -44,12 +43,12 @@
       body {
         margin: 0;
         min-height: 100vh;
+        font-family: "Outfit", "Avenir Next", "Segoe UI", sans-serif;
         color: var(--ink);
-        font-family: "Manrope", "Avenir Next", "Segoe UI", sans-serif;
         background:
-          radial-gradient(circle at 8% 8%, rgba(226, 94, 42, 0.16) 0%, transparent 33%),
-          radial-gradient(circle at 90% 0%, rgba(11, 117, 143, 0.2) 0%, transparent 35%),
-          linear-gradient(165deg, #efe6d8 0%, #f7f1e8 42%, #e9f0f3 100%);
+          radial-gradient(circle at 12% 5%, rgba(239, 106, 47, 0.28) 0%, transparent 38%),
+          radial-gradient(circle at 84% 0%, rgba(26, 147, 165, 0.3) 0%, transparent 42%),
+          linear-gradient(170deg, var(--bg-deep) 0%, var(--bg-ink) 40%, #153a58 100%);
       }
 
       body::before {
@@ -57,41 +56,39 @@
         position: fixed;
         inset: 0;
         pointer-events: none;
-        opacity: 0.26;
+        opacity: 0.2;
         background-image:
-          linear-gradient(rgba(21, 34, 50, 0.03) 1px, transparent 1px),
-          linear-gradient(90deg, rgba(21, 34, 50, 0.03) 1px, transparent 1px);
-        background-size: 30px 30px;
+          linear-gradient(rgba(255, 255, 255, 0.05) 1px, transparent 1px),
+          linear-gradient(90deg, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
+        background-size: 28px 28px;
       }
 
       .shell {
-        max-width: 1160px;
+        max-width: 1180px;
         margin: 0 auto;
-        padding: 24px;
+        padding: 22px;
         position: relative;
         z-index: 1;
       }
 
       .topbar {
         display: flex;
-        align-items: center;
         justify-content: space-between;
+        align-items: center;
         gap: 12px;
         padding: 10px 12px;
         border-radius: 14px;
-        border: 1px solid var(--line);
-        background: rgba(255, 255, 255, 0.74);
-        box-shadow: 0 10px 24px rgba(23, 43, 66, 0.09);
-        animation: fade-up 0.45s ease-out both;
+        border: 1px solid rgba(228, 244, 255, 0.22);
+        background: rgba(10, 24, 40, 0.65);
+        backdrop-filter: blur(8px);
+        animation: rise 0.42s ease-out both;
       }
 
       .brand {
         text-decoration: none;
-        color: var(--ink);
-        font-family: "Syne", "Avenir Next", sans-serif;
-        font-size: 1.08rem;
+        color: #eff8ff;
         font-weight: 800;
-        letter-spacing: 0.03em;
+        letter-spacing: 0.04em;
       }
 
       .nav-links {
@@ -102,58 +99,53 @@
 
       .nav-links a {
         text-decoration: none;
-        color: var(--ink);
+        color: #e7f6ff;
         border-radius: 999px;
-        border: 1px solid var(--line);
-        background: rgba(255, 255, 255, 0.82);
+        border: 1px solid rgba(221, 242, 255, 0.28);
+        background: rgba(9, 38, 57, 0.5);
         padding: 6px 12px;
-        font-weight: 700;
-        font-size: 0.78rem;
+        font-size: 0.8rem;
+        font-weight: 600;
       }
 
       .hero {
-        margin-top: 16px;
+        margin-top: 14px;
         display: grid;
-        grid-template-columns: 1.08fr 0.92fr;
         gap: 14px;
-      }
-
-      .hero-main,
-      .hero-side {
-        border-radius: 22px;
-        border: 1px solid var(--line);
-        animation: fade-up 0.5s ease-out both;
+        grid-template-columns: 1.12fr 0.88fr;
       }
 
       .hero-main {
-        background: var(--hero);
+        background: linear-gradient(165deg, rgba(255, 253, 249, 0.96) 0%, rgba(240, 249, 254, 0.94) 100%);
+        border: 1px solid var(--panel-border);
+        border-radius: 22px;
         padding: 28px;
-        box-shadow: 0 26px 44px rgba(17, 30, 43, 0.13);
+        box-shadow: 0 24px 44px rgba(2, 14, 24, 0.26);
+        animation: rise 0.5s ease-out both;
       }
 
       .eyebrow {
         margin: 0;
         text-transform: uppercase;
-        letter-spacing: 0.11em;
+        letter-spacing: 0.12em;
+        font-size: 0.73rem;
         font-weight: 700;
-        font-size: 0.72rem;
-        color: var(--ink-soft);
+        color: #3e5f7d;
       }
 
       h1 {
-        margin: 12px 0;
-        font-family: "Syne", "Avenir Next", sans-serif;
-        font-weight: 800;
-        font-size: clamp(2.1rem, 4.4vw, 3.35rem);
-        line-height: 1.02;
-        max-width: 14ch;
+        margin: 10px 0 12px;
+        max-width: 13ch;
+        font-family: "Fraunces", "Outfit", sans-serif;
+        font-size: clamp(2.2rem, 4.6vw, 3.5rem);
+        line-height: 0.98;
       }
 
       .lead {
         margin: 0;
-        max-width: 55ch;
-        font-size: 1.02rem;
-        line-height: 1.52;
+        max-width: 56ch;
+        font-size: 1.03rem;
+        line-height: 1.55;
         color: var(--ink-soft);
       }
 
@@ -166,22 +158,22 @@
 
       .btn {
         text-decoration: none;
-        border-radius: 12px;
+        border-radius: 11px;
         padding: 11px 15px;
-        font-weight: 800;
-        font-size: 0.88rem;
+        font-weight: 700;
+        font-size: 0.9rem;
       }
 
       .btn-primary {
         color: #fff;
-        background: linear-gradient(140deg, var(--brand-dark) 0%, var(--brand) 48%, #f08a48 100%);
-        box-shadow: 0 10px 20px rgba(197, 78, 33, 0.26);
+        background: linear-gradient(140deg, #c44f1f 0%, var(--hot) 55%, #ff965c 100%);
+        box-shadow: 0 10px 18px rgba(210, 89, 38, 0.34);
       }
 
       .btn-secondary {
         color: #fff;
-        background: linear-gradient(140deg, #0b637a 0%, var(--sea) 55%, #17a4c5 100%);
-        box-shadow: 0 10px 20px rgba(8, 89, 110, 0.23);
+        background: linear-gradient(140deg, #156d78 0%, var(--teal) 54%, #2cb9cb 100%);
+        box-shadow: 0 10px 18px rgba(22, 111, 123, 0.32);
       }
 
       .pill-row {
@@ -193,60 +185,63 @@
 
       .pill {
         border-radius: 999px;
-        border: 1px solid rgba(21, 34, 50, 0.2);
-        background: #f7f3ec;
+        border: 1px solid rgba(17, 46, 71, 0.18);
+        background: rgba(255, 255, 255, 0.9);
         padding: 5px 10px;
-        font-size: 0.72rem;
+        font-size: 0.73rem;
         font-weight: 700;
-        color: #29425d;
+        color: #294765;
       }
 
       .hero-side {
-        background: linear-gradient(170deg, rgba(14, 38, 59, 0.94) 0%, rgba(8, 77, 99, 0.9) 100%);
-        color: #eff8ff;
+        border-radius: 22px;
+        border: 1px solid rgba(218, 241, 255, 0.24);
+        background: linear-gradient(170deg, rgba(8, 30, 48, 0.95) 0%, rgba(10, 86, 106, 0.9) 100%);
+        color: #e9f8ff;
         padding: 24px;
-        box-shadow: 0 24px 40px rgba(11, 30, 48, 0.24);
-        animation-delay: 0.1s;
+        box-shadow: 0 24px 42px rgba(3, 13, 23, 0.32);
+        animation: rise 0.54s ease-out both;
+        animation-delay: 0.08s;
       }
 
       .hero-side h2 {
         margin: 0 0 10px;
-        font-family: "Syne", "Avenir Next", sans-serif;
-        font-size: 1.08rem;
+        font-family: "Fraunces", "Outfit", sans-serif;
+        font-size: 1.12rem;
       }
 
       .hero-side ul {
         margin: 0;
         padding-left: 19px;
         display: grid;
-        gap: 7px;
-        color: #d4ecfb;
+        gap: 8px;
+        color: #d0e8f8;
       }
 
       .metric-row {
         margin-top: 16px;
         display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
         gap: 8px;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
       }
 
       .metric {
         border-radius: 12px;
-        border: 1px solid rgba(222, 242, 255, 0.22);
-        background: rgba(4, 31, 49, 0.62);
-        padding: 9px;
+        border: 1px solid rgba(205, 235, 250, 0.24);
+        background: rgba(6, 37, 58, 0.62);
+        padding: 10px;
       }
 
       .metric strong {
         display: block;
-        font-family: "Syne", "Avenir Next", sans-serif;
-        font-size: 1.18rem;
-        color: #fff6ef;
+        font-size: 1.2rem;
+        font-family: "Fraunces", "Outfit", sans-serif;
+        color: #fff7ee;
       }
 
       .metric span {
         font-size: 0.72rem;
-        color: #c5dff0;
+        color: #c4deef;
       }
 
       .section-grid {
@@ -257,16 +252,16 @@
       }
 
       .section-card {
-        border: 1px solid var(--line);
-        background: var(--surface-strong);
         border-radius: 18px;
+        border: 1px solid var(--panel-border);
+        background: var(--panel);
         padding: 18px;
-        box-shadow: 0 14px 26px rgba(16, 29, 42, 0.1);
-        animation: fade-up 0.56s ease-out both;
+        box-shadow: 0 15px 28px rgba(6, 20, 34, 0.22);
+        animation: rise 0.57s ease-out both;
       }
 
       .section-card:nth-child(1) {
-        animation-delay: 0.04s;
+        animation-delay: 0.05s;
       }
 
       .section-card:nth-child(2) {
@@ -274,42 +269,41 @@
       }
 
       .section-card:nth-child(3) {
-        animation-delay: 0.16s;
+        animation-delay: 0.15s;
       }
 
       .section-card h3 {
-        margin: 0 0 7px;
-        font-family: "Syne", "Avenir Next", sans-serif;
-        font-size: 1.03rem;
+        margin: 0 0 8px;
+        font-family: "Fraunces", "Outfit", sans-serif;
+        font-size: 1.06rem;
       }
 
       .section-card p {
         margin: 0;
         color: var(--ink-soft);
-        line-height: 1.47;
+        line-height: 1.5;
       }
 
       .workflow {
         margin-top: 14px;
         border-radius: 18px;
-        border: 1px solid var(--line);
-        background: linear-gradient(165deg, rgba(255, 252, 245, 0.95) 0%, rgba(234, 249, 246, 0.95) 100%);
+        border: 1px solid rgba(15, 42, 66, 0.2);
+        background: linear-gradient(165deg, rgba(255, 252, 246, 0.95) 0%, rgba(198, 242, 228, 0.9) 100%);
         padding: 18px;
-        box-shadow: 0 14px 24px rgba(18, 33, 48, 0.1);
-        animation: fade-up 0.62s ease-out both;
-        animation-delay: 0.22s;
+        box-shadow: 0 16px 28px rgba(8, 20, 30, 0.23);
+        animation: rise 0.62s ease-out both;
       }
 
       .workflow h2 {
         margin: 0 0 10px;
-        font-family: "Syne", "Avenir Next", sans-serif;
-        font-size: 1.04rem;
+        font-family: "Fraunces", "Outfit", sans-serif;
+        font-size: 1.08rem;
       }
 
       .workflow ol {
         margin: 0;
-        padding-left: 20px;
-        color: var(--ink-soft);
+        padding-left: 21px;
+        color: #21405d;
       }
 
       .workflow li {
@@ -320,16 +314,16 @@
         font-family: var(--mono);
         font-size: 0.82em;
         border-radius: 6px;
-        background: #ecf5f8;
-        border: 1px solid rgba(10, 76, 93, 0.24);
-        color: #124760;
+        border: 1px solid rgba(20, 62, 90, 0.24);
+        background: #edf7fb;
+        color: #164769;
         padding: 1px 6px;
       }
 
       footer {
         margin-top: 12px;
-        color: #3b5773;
-        font-size: 0.81rem;
+        color: #d0e8f8;
+        font-size: 0.83rem;
       }
 
       @media (max-width: 940px) {
@@ -420,7 +414,7 @@
               <span>Playwright flows</span>
             </div>
             <div class="metric">
-              <strong>69+</strong>
+              <strong>70+</strong>
               <span>delivery segments</span>
             </div>
           </div>
